--- a/index.html
+++ b/index.html
@@ -58,28 +58,28 @@ Làm bài test DISC miễn phí để biết: tính cách thật của bạn, đ
 <span>
   <img src="/assets/1.webp" alt="hieu ro" loading="lazy">
   <div>
-    <p>Hiểu rõ điểm mạnh & điểm yếu bẩm sinh</p>
+    <h3><p>Hiểu rõ điểm mạnh & điểm yếu bẩm sinh</p></h3>
     <span>Giúp bạn biết điều mình làm tốt nhất, điều đang cản trở bạn và cách phát triển đúng hướng.</span>    
   </div>
 </span>
 <span>
   <img src="/assets/2.webp" alt="giao tiep" loading="lazy">  
   <div>
-    <p>Giao tiếp hiệu quả & hạn chế xung đột</p>
+    <h3><p>Giao tiếp hiệu quả & hạn chế xung đột</p></h3>
     <span>Giúp bạn hiểu người khác, giảm mâu thuẫn và dễ dàng hòa hợp trong mọi môi trường.</span>    
   </div>
 </span>
 <span>
   <img src="/assets/3.webp" alt="phong cach" loading="lazy">
   <div>    
-    <p>Tìm ra phong cách lãnh đạo, học tập & làm việc riêng của bạn</p>
+    <h3><p>Tìm ra phong cách lãnh đạo, học tập & làm việc riêng của bạn</p></h3>
     <span>Hỗ trợ bạn phát triển sự nghiệp và các mối quan hệ</span>
   </div>
 </span>
 <span>
   <img src="/assets/4.webp" alt="ca nhan" loading="lazy">
   <div>
-    <p>Nhận bản phân tích cá nhân hóa theo tính cách</p>
+    <h3><p>Nhận bản phân tích cá nhân hóa theo tính cách</p></h3>
     <span>Giúp bạn định hướng nghề nghiệp, tìm môi trường phù hợp và biết cách phát triển bản thân đúng nhất.</span>    
   </div>
 </span>
