--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <p>“Có những lúc tôi từng hoang mang không hiểu vì sao mình nỗ lực mà người khác không ghi nhận, hay vì sao cùng một lời nói nhưng người khác lại phản ứng rất khác.
   <br>
  Mọi thứ thay đổi khi tôi biết đến DISC — một công cụ đơn giản nhưng cực kỳ sâu sắc giúp tôi <strong>hiểu rõ cách mình vận hành, cách người khác nghĩ, và cách để kết nối tốt hơn.</strong>”</p>
-<p>Xin chào, mình là <strong>Đào</strong> – người đồng hành cùng bạn trên hành trình <strong>khám phá bản thân và phát triển tiềm năng qua DISC.</strong>
+<p>Xin chào, mình là <strong>Jennie</strong> – người đồng hành cùng bạn trên hành trình <strong>khám phá bản thân và phát triển tiềm năng qua DISC.</strong>
 <br>
 Bài test dưới đây là <strong>bản miễn phí</strong>, được thiết kế ngắn gọn, dễ hiểu, phù hợp cho bất kỳ ai muốn bắt đầu hành trình “thấu hiểu bản thân để sống hạnh phúc và hiệu quả hơn”.</p>
 <a href="#nhan-bai-test" class="btn1">Nhận bài test</a>
@@ -95,8 +95,8 @@ Làm bài test DISC miễn phí để biết: tính cách thật của bạn, đ
 <h2 class="title">Nhận bài test DISC miễn phí</h2>
 <form id="discForm">
   <fieldset>
-    <label>Họ Và Tên</label>
-    <input type="text" name="full_name" placeholder="Nhập Họ Và Tên" required>
+    <label>Họ Và Tên Đầy Đủ</label>
+    <input type="text" name="full_name" placeholder="Nhập Họ Và Tên Đầy Đủ" required>
 
     <label>Ngày Tháng Năm Sinh</label>
     <input type="date" name="dob" required>
