--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <meta property="og:image" content="/assets/image-disc.jpg">
   <link rel="icon" href="/assets/icon-disc.png" type="image/png">
 
-  <link rel="stylesheet" href="/assets/disc.css?ver=1.0.11">
+  <link rel="stylesheet" href="/assets/disc.css?ver=1.0.12">
   <!--GOOGLE FONTS-->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600;700&family=Dancing+Script:wght@400;500;600&family=Josefin+Sans:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@700&family=Josefin+Sans:wght@300&display=swap" rel="stylesheet"> 
 
 </head>
 <body>
