--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta property="og:image" content="/assets/image-disc.jpg">
   <link rel="icon" href="/assets/icon-disc.png" type="image/png">
 
-  <link rel="stylesheet" href="/assets/disc.css?ver=1.0.12">
+  <link rel="stylesheet" href="/assets/disc.css?ver=1.0.13">
   <!--GOOGLE FONTS-->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -91,7 +91,7 @@ Làm bài test DISC miễn phí để biết: tính cách thật của bạn, đ
 <footer>
 <div id="nhan-bai-test" class="top_header">
 <section>
-<img src="https://i.postimg.cc/FFJCzwzY/icon-3.png" alt="">
+<img src="/assets/icon-3.png" alt="">
 <h2 class="title">Nhận bài test DISC miễn phí</h2>
 <form id="discForm">
   <fieldset>
